SERVER-53000 Retry command on stale exception on shards only if the shard is stale